--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "immer": "^9.0.19",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "use-immer": "^0.8.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
