--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jsdom": "^21.1.0",
         "prettier": "^2.8.4",
         "react-test-renderer": "^18.2.0",
+        "sass": "^1.58.3",
         "typescript": "^4.9.3",
         "vite": "^4.1.0",
         "vitest": "^0.28.5"
